k8s-practice/ingress/deploy1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 3
  selector:
     matchLabels:
       env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
       - name: web
         image: menamagdyhalem/simple-webserver
         ports:
           - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  type: ClusterIP
  selector:
    env: prod
  ports:
    - port: 80
      targetPort: 3000
