k8s-practice/ingress/deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 3
  selector:
     matchLabels:
       env: prod2
  template:
    metadata:
      labels:
        env: prod2
    spec:
      containers:
       - name: web2
         image: gcr.io/google-samples/hello-app:2.0
         ports:
           - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  type: ClusterIP
  selector:
    env: prod2
  ports:
    - port: 80
      targetPort: 8080
